src/styles/components/_table.scss
// This mixin makes a react-md table have a fixed header with scrolling body.
// Need to specify the required vh of the body, which is dependent on how much other stuff
// is above the table
@mixin fixedTableHeader($table-body-vh) {
  .md-table-header {
    .md-table-row {
      display: table;
      table-layout: fixed;
      width: 100%;
      text-align: center;
    }
  }

  .md-table-body {
    display: block;
    overflow: auto;
    height: $table-body-vh;

    .md-table-row {
      display: table;
      table-layout: fixed;
      width: 100%;
      cursor: pointer;
    }

    .frame::-webkit-scrollbar:vertical {
      width: 11px;
    }

    .frame::-webkit-scrollbar-thumb {
      border-radius: 8px;
      border: 2px solid white; /* should match background, can't be transparent */
      background-color: rgba(0, 0, 0, 0.5);
    }
  }
}

@mixin wrapHeaders($first-column-width) {
  .md-table-column:first-child {
    width: $first-column-width;
  }
  .md-table-column--header {
    overflow-wrap: break-word;
    white-space: pre-line;
  }
  .md-table-column--adjusted {
    padding-right: 10px !important;
    overflow-wrap: break-word !important;
    max-width: 100%;
  }
  .md-table-column--sortable {
    .md-icon-text {
      padding-left: 0px !important;
      overflow-wrap: break-word;
      max-width: calc(100% - 21px);
    }
  }
}

.DataTable--ManageUsers {
  @include fixedTableHeader(calc(100vh - 470px));

  &__pagination {
    .md-table-pagination {
      margin-left: calc(100vw - 500px) !important;
    }
  }
}

.DataTable--ManageSections {
  @include fixedTableHeader(calc(100vh - 400px));
}

.DataTable--StudentData-All {
  @include fixedTableHeader(calc(100vh - 350px));
  @include wrapHeaders(200px);
}

.DataTable--StudentData-Selected {
  @include fixedTableHeader(calc(100vh - 380px));
}

.DataTable--GraderData-All {
  @include fixedTableHeader(calc(100vh - 350px));
  @include wrapHeaders(200px);
}

.DataTable--GraderData-Selected {
  @include fixedTableHeader(calc(100vh - 420px));
}

.DataTable--Grader {
  @include fixedTableHeader(calc(100vh - 250px));
  @include wrapHeaders(200px);
}

.DataTable--ViewAll {
  @include fixedTableHeader(calc(100vh - 260px));
  @include wrapHeaders(200px);
}

.DataTable--Section {
  @include fixedTableHeader(calc(100vh - 280px));
  @include wrapHeaders(200px);
}

.DataTable--RubricCategory {
  .md-divider--text-field {
    margin-bottom: 0px;
    margin-top: 3px;
  }
}

